@@ -30,6 +30,9 @@ libmafw (0.1.2009.21-1) unstable; urgency=low
  -- Juha Kellokoski <veitikka6@gmail.com>  Thu, 14 May 2009 10:09:18 +0300
 mafw-gst-renderer (0.1.2009.21-1) unstable; urgency=low
   * MAFW gst renderer, pre-release 0.2009.21-1
+  * Do not reuse video sink for now, somehow it gets
+    broken after some time and as a result we cannot set XID of target
+    video window to use.
   * Create and configure audio and video sinks once, then provide these
     to playbin2 when a new pipeline is created.
   * Changed _handle_duration to use _check_duration and added for
@@ -70,6 +73,8 @@ mafw-test-gui (0.1.2009.21-1) unstable; urgency=low
  -- Juha Kellokoski <veitikka6@gmail.com>  Thu, 14 May 2009 10:09:18 +0300
 mafw-tracker-source (0.1.2009.21-1) unstable; urgency=low
   * MAFW tracker source, pre-release 0.2009.21-1
+  * Use the new API for getting thumbnails.
+  * Check GPtrArray boundary limits.
   * Avoid calling Tracker when no metadata is requested get metadatas
     function.
   * Updated to changes in hildon-thumbnail beahvior.
@@ -85,8 +90,9 @@ mafw-upnp-source (0.1.2009.21-1) unstable; urgency=low
 
 BUGS RESOLVED IN THIS RELEASE
 
-From changelog: 6
+From changelog: 7
 * Fixes: NB#116647 - ‘mafw-playlist-daemon’ crash observed while rename proxy playlist 
+* Fixes: NB#117015 - video plays in windowed mode
 * Fixes: NB#100842 - seeking in aac over http fails
 * Fixes: NB#115126 - Media Player abuses Tracker API while playing songs
 * Fixes: NB#116598 - ‘Import selected object-id’ not working for playlist file from tracker source
